src/orgmunge/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> org_file
Rule 1     org_file -> metadata org_tree
Rule 2     org_file -> non_metadata_body_text SEPARATOR org_tree
Rule 3     org_file -> metadata non_metadata_body_text SEPARATOR org_tree
Rule 4     org_file -> metadata non_metadata_body_text SEPARATOR
Rule 5     org_file -> metadata
Rule 6     org_file -> org_tree
Rule 7     org_file -> SEPARATOR
Rule 8     org_file -> empty
Rule 9     metadata -> METADATA SEPARATOR
Rule 10    metadata -> METADATA NEWLINE
Rule 11    org_tree -> heading
Rule 12    org_tree -> heading SEPARATOR
Rule 13    org_tree -> org_tree heading SEPARATOR
Rule 14    org_tree -> org_tree heading
Rule 15    heading -> headline NEWLINE contents
Rule 16    heading -> headline SEPARATOR
Rule 17    headline -> STARS SPACE comment todo priority title cookie tags
Rule 18    comment -> COMMENT SPACE
Rule 19    comment -> empty
Rule 20    todo -> TODO SPACE
Rule 21    todo -> empty
Rule 22    priority -> PRIORITY SPACE
Rule 23    priority -> empty
Rule 24    title -> TEXT
Rule 25    title -> TODO
Rule 26    title -> title SPACE TEXT
Rule 27    title -> title SPACE TODO
Rule 28    title -> title SPACE
Rule 29    title -> empty
Rule 30    cookie -> COOKIE SPACE
Rule 31    cookie -> COOKIE
Rule 32    cookie -> empty
Rule 33    tags -> TAGS
Rule 34    tags -> empty
Rule 35    contents -> scheduling drawers body
Rule 36    scheduling_data -> SCHEDULING SPACE any_timestamp NEWLINE
Rule 37    scheduling_data -> SCHEDULING SPACE any_timestamp SEPARATOR
Rule 38    scheduling_data -> SCHEDULING SPACE any_timestamp SPACE
Rule 39    scheduling_data -> scheduling_data SCHEDULING SPACE any_timestamp NEWLINE
Rule 40    scheduling_data -> scheduling_data SCHEDULING SPACE any_timestamp SEPARATOR
Rule 41    scheduling_data -> scheduling_data SCHEDULING SPACE any_timestamp SPACE
Rule 42    scheduling -> scheduling_data
Rule 43    scheduling -> empty
Rule 44    any_timestamp -> ATIMESTAMP
Rule 45    any_timestamp -> ITIMESTAMP
Rule 46    drawer_data -> DRAWER NEWLINE
Rule 47    drawer_data -> DRAWER SEPARATOR
Rule 48    drawer_data -> drawer_data DRAWER NEWLINE
Rule 49    drawer_data -> drawer_data DRAWER SEPARATOR
Rule 50    drawers -> drawer_data
Rule 51    drawers -> empty
Rule 52    body -> body_text
Rule 53    body -> empty
Rule 54    non_metadata_body_text -> TEXT
Rule 55    non_metadata_body_text -> SPACE
Rule 56    non_metadata_body_text -> any_timestamp
Rule 57    non_metadata_body_text -> non_metadata_body_text TEXT
Rule 58    non_metadata_body_text -> non_metadata_body_text SPACE
Rule 59    non_metadata_body_text -> non_metadata_body_text special_token
Rule 60    non_metadata_body_text -> non_metadata_body_text NEWLINE
Rule 61    special_token -> SCHEDULING
Rule 62    special_token -> COOKIE
Rule 63    special_token -> PRIORITY
Rule 64    special_token -> TODO
Rule 65    special_token -> any_timestamp
Rule 66    special_token -> COMMENT
Rule 67    special_token -> TAGS
Rule 68    body_text -> TEXT
Rule 69    body_text -> SPACE
Rule 70    body_text -> METADATA
Rule 71    body_text -> special_token
Rule 72    body_text -> body_text TEXT
Rule 73    body_text -> body_text SPACE
Rule 74    body_text -> body_text special_token
Rule 75    body_text -> body_text METADATA
Rule 76    body_text -> body_text NEWLINE
Rule 77    empty -> <empty>

Terminals, with rules where they appear

ATIMESTAMP           : 44
COMMENT              : 18 66
COOKIE               : 30 31 62
DRAWER               : 46 47 48 49
ITIMESTAMP           : 45
METADATA             : 9 10 70 75
NEWLINE              : 10 15 36 39 46 48 60 76
PRIORITY             : 22 63
SCHEDULING           : 36 37 38 39 40 41 61
SEPARATOR            : 2 3 4 7 9 12 13 16 37 40 47 49
SPACE                : 17 18 20 22 26 27 28 30 36 37 38 38 39 40 41 41 55 58 69 73
STARS                : 17
TAGS                 : 33 67
TEXT                 : 24 26 54 57 68 72
TODO                 : 20 25 27 64
error                : 

Nonterminals, with rules where they appear

any_timestamp        : 36 37 38 39 40 41 56 65
body                 : 35
body_text            : 52 72 73 74 75 76
comment              : 17
contents             : 15
cookie               : 17
drawer_data          : 48 49 50
drawers              : 35
empty                : 8 19 21 23 29 32 34 43 51 53
heading              : 11 12 13 14
headline             : 15 16
metadata             : 1 3 4 5
non_metadata_body_text : 2 3 4 57 58 59 60
org_file             : 0
org_tree             : 1 2 3 6 13 14
priority             : 17
scheduling           : 35
scheduling_data      : 39 40 41 42
special_token        : 59 71 74
tags                 : 17
title                : 17 26 27 28
todo                 : 17

Parsing method: LALR

state 0

    (0) S' -> . org_file
    (1) org_file -> . metadata org_tree
    (2) org_file -> . non_metadata_body_text SEPARATOR org_tree
    (3) org_file -> . metadata non_metadata_body_text SEPARATOR org_tree
    (4) org_file -> . metadata non_metadata_body_text SEPARATOR
    (5) org_file -> . metadata
    (6) org_file -> . org_tree
    (7) org_file -> . SEPARATOR
    (8) org_file -> . empty
    (9) metadata -> . METADATA SEPARATOR
    (10) metadata -> . METADATA NEWLINE
    (54) non_metadata_body_text -> . TEXT
    (55) non_metadata_body_text -> . SPACE
    (56) non_metadata_body_text -> . any_timestamp
    (57) non_metadata_body_text -> . non_metadata_body_text TEXT
    (58) non_metadata_body_text -> . non_metadata_body_text SPACE
    (59) non_metadata_body_text -> . non_metadata_body_text special_token
    (60) non_metadata_body_text -> . non_metadata_body_text NEWLINE
    (11) org_tree -> . heading
    (12) org_tree -> . heading SEPARATOR
    (13) org_tree -> . org_tree heading SEPARATOR
    (14) org_tree -> . org_tree heading
    (77) empty -> .
    (44) any_timestamp -> . ATIMESTAMP
    (45) any_timestamp -> . ITIMESTAMP
    (15) heading -> . headline NEWLINE contents
    (16) heading -> . headline SEPARATOR
    (17) headline -> . STARS SPACE comment todo priority title cookie tags

    SEPARATOR       shift and go to state 5
    METADATA        shift and go to state 7
    TEXT            shift and go to state 8
    SPACE           shift and go to state 9
    $end            reduce using rule 77 (empty -> .)
    ATIMESTAMP      shift and go to state 12
    ITIMESTAMP      shift and go to state 13
    STARS           shift and go to state 15

    org_file                       shift and go to state 1
    metadata                       shift and go to state 2
    org_tree                       shift and go to state 3
    non_metadata_body_text         shift and go to state 4
    empty                          shift and go to state 6
    any_timestamp                  shift and go to state 10
    heading                        shift and go to state 11
    headline                       shift and go to state 14

state 1

    (0) S' -> org_file .



state 2

    (1) org_file -> metadata . org_tree
    (3) org_file -> metadata . non_metadata_body_text SEPARATOR org_tree
    (4) org_file -> metadata . non_metadata_body_text SEPARATOR
    (5) org_file -> metadata .
    (11) org_tree -> . heading
    (12) org_tree -> . heading SEPARATOR
    (13) org_tree -> . org_tree heading SEPARATOR
    (14) org_tree -> . org_tree heading
    (54) non_metadata_body_text -> . TEXT
    (55) non_metadata_body_text -> . SPACE
    (56) non_metadata_body_text -> . any_timestamp
    (57) non_metadata_body_text -> . non_metadata_body_text TEXT
    (58) non_metadata_body_text -> . non_metadata_body_text SPACE
    (59) non_metadata_body_text -> . non_metadata_body_text special_token
    (60) non_metadata_body_text -> . non_metadata_body_text NEWLINE
    (15) heading -> . headline NEWLINE contents
    (16) heading -> . headline SEPARATOR
    (44) any_timestamp -> . ATIMESTAMP
    (45) any_timestamp -> . ITIMESTAMP
    (17) headline -> . STARS SPACE comment todo priority title cookie tags

    $end            reduce using rule 5 (org_file -> metadata .)
    TEXT            shift and go to state 8
    SPACE           shift and go to state 9
    ATIMESTAMP      shift and go to state 12
    ITIMESTAMP      shift and go to state 13
    STARS           shift and go to state 15

    org_tree                       shift and go to state 16
    non_metadata_body_text         shift and go to state 17
    heading                        shift and go to state 11
    any_timestamp                  shift and go to state 10
    headline                       shift and go to state 14

state 3

    (6) org_file -> org_tree .
    (13) org_tree -> org_tree . heading SEPARATOR
    (14) org_tree -> org_tree . heading
    (15) heading -> . headline NEWLINE contents
    (16) heading -> . headline SEPARATOR
    (17) headline -> . STARS SPACE comment todo priority title cookie tags

    $end            reduce using rule 6 (org_file -> org_tree .)
    STARS           shift and go to state 15

    heading                        shift and go to state 18
    headline                       shift and go to state 14

state 4

    (2) org_file -> non_metadata_body_text . SEPARATOR org_tree
    (57) non_metadata_body_text -> non_metadata_body_text . TEXT
    (58) non_metadata_body_text -> non_metadata_body_text . SPACE
    (59) non_metadata_body_text -> non_metadata_body_text . special_token
    (60) non_metadata_body_text -> non_metadata_body_text . NEWLINE
    (61) special_token -> . SCHEDULING
    (62) special_token -> . COOKIE
    (63) special_token -> . PRIORITY
    (64) special_token -> . TODO
    (65) special_token -> . any_timestamp
    (66) special_token -> . COMMENT
    (67) special_token -> . TAGS
    (44) any_timestamp -> . ATIMESTAMP
    (45) any_timestamp -> . ITIMESTAMP

    SEPARATOR       shift and go to state 19
    TEXT            shift and go to state 20
    SPACE           shift and go to state 21
    NEWLINE         shift and go to state 23
    SCHEDULING      shift and go to state 24
    COOKIE          shift and go to state 25
    PRIORITY        shift and go to state 26
    TODO            shift and go to state 27
    COMMENT         shift and go to state 29
    TAGS            shift and go to state 30
    ATIMESTAMP      shift and go to state 12
    ITIMESTAMP      shift and go to state 13

    special_token                  shift and go to state 22
    any_timestamp                  shift and go to state 28

state 5

    (7) org_file -> SEPARATOR .

    $end            reduce using rule 7 (org_file -> SEPARATOR .)


state 6

    (8) org_file -> empty .

    $end            reduce using rule 8 (org_file -> empty .)


state 7

    (9) metadata -> METADATA . SEPARATOR
    (10) metadata -> METADATA . NEWLINE

    SEPARATOR       shift and go to state 31
    NEWLINE         shift and go to state 32


state 8

    (54) non_metadata_body_text -> TEXT .

    SEPARATOR       reduce using rule 54 (non_metadata_body_text -> TEXT .)
    TEXT            reduce using rule 54 (non_metadata_body_text -> TEXT .)
    SPACE           reduce using rule 54 (non_metadata_body_text -> TEXT .)
    NEWLINE         reduce using rule 54 (non_metadata_body_text -> TEXT .)
    SCHEDULING      reduce using rule 54 (non_metadata_body_text -> TEXT .)
    COOKIE          reduce using rule 54 (non_metadata_body_text -> TEXT .)
    PRIORITY        reduce using rule 54 (non_metadata_body_text -> TEXT .)
    TODO            reduce using rule 54 (non_metadata_body_text -> TEXT .)
    COMMENT         reduce using rule 54 (non_metadata_body_text -> TEXT .)
    TAGS            reduce using rule 54 (non_metadata_body_text -> TEXT .)
    ATIMESTAMP      reduce using rule 54 (non_metadata_body_text -> TEXT .)
    ITIMESTAMP      reduce using rule 54 (non_metadata_body_text -> TEXT .)


state 9

    (55) non_metadata_body_text -> SPACE .

    SEPARATOR       reduce using rule 55 (non_metadata_body_text -> SPACE .)
    TEXT            reduce using rule 55 (non_metadata_body_text -> SPACE .)
    SPACE           reduce using rule 55 (non_metadata_body_text -> SPACE .)
    NEWLINE         reduce using rule 55 (non_metadata_body_text -> SPACE .)
    SCHEDULING      reduce using rule 55 (non_metadata_body_text -> SPACE .)
    COOKIE          reduce using rule 55 (non_metadata_body_text -> SPACE .)
    PRIORITY        reduce using rule 55 (non_metadata_body_text -> SPACE .)
    TODO            reduce using rule 55 (non_metadata_body_text -> SPACE .)
    COMMENT         reduce using rule 55 (non_metadata_body_text -> SPACE .)
    TAGS            reduce using rule 55 (non_metadata_body_text -> SPACE .)
    ATIMESTAMP      reduce using rule 55 (non_metadata_body_text -> SPACE .)
    ITIMESTAMP      reduce using rule 55 (non_metadata_body_text -> SPACE .)


state 10

    (56) non_metadata_body_text -> any_timestamp .

    SEPARATOR       reduce using rule 56 (non_metadata_body_text -> any_timestamp .)
    TEXT            reduce using rule 56 (non_metadata_body_text -> any_timestamp .)
    SPACE           reduce using rule 56 (non_metadata_body_text -> any_timestamp .)
    NEWLINE         reduce using rule 56 (non_metadata_body_text -> any_timestamp .)
    SCHEDULING      reduce using rule 56 (non_metadata_body_text -> any_timestamp .)
    COOKIE          reduce using rule 56 (non_metadata_body_text -> any_timestamp .)
    PRIORITY        reduce using rule 56 (non_metadata_body_text -> any_timestamp .)
    TODO            reduce using rule 56 (non_metadata_body_text -> any_timestamp .)
    COMMENT         reduce using rule 56 (non_metadata_body_text -> any_timestamp .)
    TAGS            reduce using rule 56 (non_metadata_body_text -> any_timestamp .)
    ATIMESTAMP      reduce using rule 56 (non_metadata_body_text -> any_timestamp .)
    ITIMESTAMP      reduce using rule 56 (non_metadata_body_text -> any_timestamp .)


state 11

    (11) org_tree -> heading .
    (12) org_tree -> heading . SEPARATOR

    STARS           reduce using rule 11 (org_tree -> heading .)
    $end            reduce using rule 11 (org_tree -> heading .)
    SEPARATOR       shift and go to state 33


state 12

    (44) any_timestamp -> ATIMESTAMP .

    SEPARATOR       reduce using rule 44 (any_timestamp -> ATIMESTAMP .)
    TEXT            reduce using rule 44 (any_timestamp -> ATIMESTAMP .)
    SPACE           reduce using rule 44 (any_timestamp -> ATIMESTAMP .)
    NEWLINE         reduce using rule 44 (any_timestamp -> ATIMESTAMP .)
    SCHEDULING      reduce using rule 44 (any_timestamp -> ATIMESTAMP .)
    COOKIE          reduce using rule 44 (any_timestamp -> ATIMESTAMP .)
    PRIORITY        reduce using rule 44 (any_timestamp -> ATIMESTAMP .)
    TODO            reduce using rule 44 (any_timestamp -> ATIMESTAMP .)
    COMMENT         reduce using rule 44 (any_timestamp -> ATIMESTAMP .)
    TAGS            reduce using rule 44 (any_timestamp -> ATIMESTAMP .)
    ATIMESTAMP      reduce using rule 44 (any_timestamp -> ATIMESTAMP .)
    ITIMESTAMP      reduce using rule 44 (any_timestamp -> ATIMESTAMP .)
    METADATA        reduce using rule 44 (any_timestamp -> ATIMESTAMP .)
    STARS           reduce using rule 44 (any_timestamp -> ATIMESTAMP .)
    $end            reduce using rule 44 (any_timestamp -> ATIMESTAMP .)


state 13

    (45) any_timestamp -> ITIMESTAMP .

    SEPARATOR       reduce using rule 45 (any_timestamp -> ITIMESTAMP .)
    TEXT            reduce using rule 45 (any_timestamp -> ITIMESTAMP .)
    SPACE           reduce using rule 45 (any_timestamp -> ITIMESTAMP .)
    NEWLINE         reduce using rule 45 (any_timestamp -> ITIMESTAMP .)
    SCHEDULING      reduce using rule 45 (any_timestamp -> ITIMESTAMP .)
    COOKIE          reduce using rule 45 (any_timestamp -> ITIMESTAMP .)
    PRIORITY        reduce using rule 45 (any_timestamp -> ITIMESTAMP .)
    TODO            reduce using rule 45 (any_timestamp -> ITIMESTAMP .)
    COMMENT         reduce using rule 45 (any_timestamp -> ITIMESTAMP .)
    TAGS            reduce using rule 45 (any_timestamp -> ITIMESTAMP .)
    ATIMESTAMP      reduce using rule 45 (any_timestamp -> ITIMESTAMP .)
    ITIMESTAMP      reduce using rule 45 (any_timestamp -> ITIMESTAMP .)
    METADATA        reduce using rule 45 (any_timestamp -> ITIMESTAMP .)
    STARS           reduce using rule 45 (any_timestamp -> ITIMESTAMP .)
    $end            reduce using rule 45 (any_timestamp -> ITIMESTAMP .)


state 14

    (15) heading -> headline . NEWLINE contents
    (16) heading -> headline . SEPARATOR

    NEWLINE         shift and go to state 34
    SEPARATOR       shift and go to state 35


state 15

    (17) headline -> STARS . SPACE comment todo priority title cookie tags

    SPACE           shift and go to state 36


state 16

    (1) org_file -> metadata org_tree .
    (13) org_tree -> org_tree . heading SEPARATOR
    (14) org_tree -> org_tree . heading
    (15) heading -> . headline NEWLINE contents
    (16) heading -> . headline SEPARATOR
    (17) headline -> . STARS SPACE comment todo priority title cookie tags

    $end            reduce using rule 1 (org_file -> metadata org_tree .)
    STARS           shift and go to state 15

    heading                        shift and go to state 18
    headline                       shift and go to state 14

state 17

    (3) org_file -> metadata non_metadata_body_text . SEPARATOR org_tree
    (4) org_file -> metadata non_metadata_body_text . SEPARATOR
    (57) non_metadata_body_text -> non_metadata_body_text . TEXT
    (58) non_metadata_body_text -> non_metadata_body_text . SPACE
    (59) non_metadata_body_text -> non_metadata_body_text . special_token
    (60) non_metadata_body_text -> non_metadata_body_text . NEWLINE
    (61) special_token -> . SCHEDULING
    (62) special_token -> . COOKIE
    (63) special_token -> . PRIORITY
    (64) special_token -> . TODO
    (65) special_token -> . any_timestamp
    (66) special_token -> . COMMENT
    (67) special_token -> . TAGS
    (44) any_timestamp -> . ATIMESTAMP
    (45) any_timestamp -> . ITIMESTAMP

    SEPARATOR       shift and go to state 37
    TEXT            shift and go to state 20
    SPACE           shift and go to state 21
    NEWLINE         shift and go to state 23
    SCHEDULING      shift and go to state 24
    COOKIE          shift and go to state 25
    PRIORITY        shift and go to state 26
    TODO            shift and go to state 27
    COMMENT         shift and go to state 29
    TAGS            shift and go to state 30
    ATIMESTAMP      shift and go to state 12
    ITIMESTAMP      shift and go to state 13

    special_token                  shift and go to state 22
    any_timestamp                  shift and go to state 28

state 18

    (13) org_tree -> org_tree heading . SEPARATOR
    (14) org_tree -> org_tree heading .

    SEPARATOR       shift and go to state 38
    STARS           reduce using rule 14 (org_tree -> org_tree heading .)
    $end            reduce using rule 14 (org_tree -> org_tree heading .)


state 19

    (2) org_file -> non_metadata_body_text SEPARATOR . org_tree
    (11) org_tree -> . heading
    (12) org_tree -> . heading SEPARATOR
    (13) org_tree -> . org_tree heading SEPARATOR
    (14) org_tree -> . org_tree heading
    (15) heading -> . headline NEWLINE contents
    (16) heading -> . headline SEPARATOR
    (17) headline -> . STARS SPACE comment todo priority title cookie tags

    STARS           shift and go to state 15

    org_tree                       shift and go to state 39
    heading                        shift and go to state 11
    headline                       shift and go to state 14

state 20

    (57) non_metadata_body_text -> non_metadata_body_text TEXT .

    SEPARATOR       reduce using rule 57 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    TEXT            reduce using rule 57 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    SPACE           reduce using rule 57 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    NEWLINE         reduce using rule 57 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    SCHEDULING      reduce using rule 57 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    COOKIE          reduce using rule 57 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    PRIORITY        reduce using rule 57 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    TODO            reduce using rule 57 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    COMMENT         reduce using rule 57 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    TAGS            reduce using rule 57 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    ATIMESTAMP      reduce using rule 57 (non_metadata_body_text -> non_metadata_body_text TEXT .)
    ITIMESTAMP      reduce using rule 57 (non_metadata_body_text -> non_metadata_body_text TEXT .)


state 21

    (58) non_metadata_body_text -> non_metadata_body_text SPACE .

    SEPARATOR       reduce using rule 58 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    TEXT            reduce using rule 58 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    SPACE           reduce using rule 58 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    NEWLINE         reduce using rule 58 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    SCHEDULING      reduce using rule 58 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    COOKIE          reduce using rule 58 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    PRIORITY        reduce using rule 58 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    TODO            reduce using rule 58 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    COMMENT         reduce using rule 58 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    TAGS            reduce using rule 58 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    ATIMESTAMP      reduce using rule 58 (non_metadata_body_text -> non_metadata_body_text SPACE .)
    ITIMESTAMP      reduce using rule 58 (non_metadata_body_text -> non_metadata_body_text SPACE .)


state 22

    (59) non_metadata_body_text -> non_metadata_body_text special_token .

    SEPARATOR       reduce using rule 59 (non_metadata_body_text -> non_metadata_body_text special_token .)
    TEXT            reduce using rule 59 (non_metadata_body_text -> non_metadata_body_text special_token .)
    SPACE           reduce using rule 59 (non_metadata_body_text -> non_metadata_body_text special_token .)
    NEWLINE         reduce using rule 59 (non_metadata_body_text -> non_metadata_body_text special_token .)
    SCHEDULING      reduce using rule 59 (non_metadata_body_text -> non_metadata_body_text special_token .)
    COOKIE          reduce using rule 59 (non_metadata_body_text -> non_metadata_body_text special_token .)
    PRIORITY        reduce using rule 59 (non_metadata_body_text -> non_metadata_body_text special_token .)
    TODO            reduce using rule 59 (non_metadata_body_text -> non_metadata_body_text special_token .)
    COMMENT         reduce using rule 59 (non_metadata_body_text -> non_metadata_body_text special_token .)
    TAGS            reduce using rule 59 (non_metadata_body_text -> non_metadata_body_text special_token .)
    ATIMESTAMP      reduce using rule 59 (non_metadata_body_text -> non_metadata_body_text special_token .)
    ITIMESTAMP      reduce using rule 59 (non_metadata_body_text -> non_metadata_body_text special_token .)


state 23

    (60) non_metadata_body_text -> non_metadata_body_text NEWLINE .

    SEPARATOR       reduce using rule 60 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    TEXT            reduce using rule 60 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    SPACE           reduce using rule 60 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    NEWLINE         reduce using rule 60 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    SCHEDULING      reduce using rule 60 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    COOKIE          reduce using rule 60 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    PRIORITY        reduce using rule 60 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    TODO            reduce using rule 60 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    COMMENT         reduce using rule 60 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    TAGS            reduce using rule 60 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    ATIMESTAMP      reduce using rule 60 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)
    ITIMESTAMP      reduce using rule 60 (non_metadata_body_text -> non_metadata_body_text NEWLINE .)


state 24

    (61) special_token -> SCHEDULING .

    SEPARATOR       reduce using rule 61 (special_token -> SCHEDULING .)
    TEXT            reduce using rule 61 (special_token -> SCHEDULING .)
    SPACE           reduce using rule 61 (special_token -> SCHEDULING .)
    NEWLINE         reduce using rule 61 (special_token -> SCHEDULING .)
    SCHEDULING      reduce using rule 61 (special_token -> SCHEDULING .)
    COOKIE          reduce using rule 61 (special_token -> SCHEDULING .)
    PRIORITY        reduce using rule 61 (special_token -> SCHEDULING .)
    TODO            reduce using rule 61 (special_token -> SCHEDULING .)
    COMMENT         reduce using rule 61 (special_token -> SCHEDULING .)
    TAGS            reduce using rule 61 (special_token -> SCHEDULING .)
    ATIMESTAMP      reduce using rule 61 (special_token -> SCHEDULING .)
    ITIMESTAMP      reduce using rule 61 (special_token -> SCHEDULING .)
    METADATA        reduce using rule 61 (special_token -> SCHEDULING .)
    STARS           reduce using rule 61 (special_token -> SCHEDULING .)
    $end            reduce using rule 61 (special_token -> SCHEDULING .)


state 25

    (62) special_token -> COOKIE .

    SEPARATOR       reduce using rule 62 (special_token -> COOKIE .)
    TEXT            reduce using rule 62 (special_token -> COOKIE .)
    SPACE           reduce using rule 62 (special_token -> COOKIE .)
    NEWLINE         reduce using rule 62 (special_token -> COOKIE .)
    SCHEDULING      reduce using rule 62 (special_token -> COOKIE .)
    COOKIE          reduce using rule 62 (special_token -> COOKIE .)
    PRIORITY        reduce using rule 62 (special_token -> COOKIE .)
    TODO            reduce using rule 62 (special_token -> COOKIE .)
    COMMENT         reduce using rule 62 (special_token -> COOKIE .)
    TAGS            reduce using rule 62 (special_token -> COOKIE .)
    ATIMESTAMP      reduce using rule 62 (special_token -> COOKIE .)
    ITIMESTAMP      reduce using rule 62 (special_token -> COOKIE .)
    METADATA        reduce using rule 62 (special_token -> COOKIE .)
    STARS           reduce using rule 62 (special_token -> COOKIE .)
    $end            reduce using rule 62 (special_token -> COOKIE .)


state 26

    (63) special_token -> PRIORITY .

    SEPARATOR       reduce using rule 63 (special_token -> PRIORITY .)
    TEXT            reduce using rule 63 (special_token -> PRIORITY .)
    SPACE           reduce using rule 63 (special_token -> PRIORITY .)
    NEWLINE         reduce using rule 63 (special_token -> PRIORITY .)
    SCHEDULING      reduce using rule 63 (special_token -> PRIORITY .)
    COOKIE          reduce using rule 63 (special_token -> PRIORITY .)
    PRIORITY        reduce using rule 63 (special_token -> PRIORITY .)
    TODO            reduce using rule 63 (special_token -> PRIORITY .)
    COMMENT         reduce using rule 63 (special_token -> PRIORITY .)
    TAGS            reduce using rule 63 (special_token -> PRIORITY .)
    ATIMESTAMP      reduce using rule 63 (special_token -> PRIORITY .)
    ITIMESTAMP      reduce using rule 63 (special_token -> PRIORITY .)
    METADATA        reduce using rule 63 (special_token -> PRIORITY .)
    STARS           reduce using rule 63 (special_token -> PRIORITY .)
    $end            reduce using rule 63 (special_token -> PRIORITY .)


state 27

    (64) special_token -> TODO .

    SEPARATOR       reduce using rule 64 (special_token -> TODO .)
    TEXT            reduce using rule 64 (special_token -> TODO .)
    SPACE           reduce using rule 64 (special_token -> TODO .)
    NEWLINE         reduce using rule 64 (special_token -> TODO .)
    SCHEDULING      reduce using rule 64 (special_token -> TODO .)
    COOKIE          reduce using rule 64 (special_token -> TODO .)
    PRIORITY        reduce using rule 64 (special_token -> TODO .)
    TODO            reduce using rule 64 (special_token -> TODO .)
    COMMENT         reduce using rule 64 (special_token -> TODO .)
    TAGS            reduce using rule 64 (special_token -> TODO .)
    ATIMESTAMP      reduce using rule 64 (special_token -> TODO .)
    ITIMESTAMP      reduce using rule 64 (special_token -> TODO .)
    METADATA        reduce using rule 64 (special_token -> TODO .)
    STARS           reduce using rule 64 (special_token -> TODO .)
    $end            reduce using rule 64 (special_token -> TODO .)


state 28

    (65) special_token -> any_timestamp .

    SEPARATOR       reduce using rule 65 (special_token -> any_timestamp .)
    TEXT            reduce using rule 65 (special_token -> any_timestamp .)
    SPACE           reduce using rule 65 (special_token -> any_timestamp .)
    NEWLINE         reduce using rule 65 (special_token -> any_timestamp .)
    SCHEDULING      reduce using rule 65 (special_token -> any_timestamp .)
    COOKIE          reduce using rule 65 (special_token -> any_timestamp .)
    PRIORITY        reduce using rule 65 (special_token -> any_timestamp .)
    TODO            reduce using rule 65 (special_token -> any_timestamp .)
    COMMENT         reduce using rule 65 (special_token -> any_timestamp .)
    TAGS            reduce using rule 65 (special_token -> any_timestamp .)
    ATIMESTAMP      reduce using rule 65 (special_token -> any_timestamp .)
    ITIMESTAMP      reduce using rule 65 (special_token -> any_timestamp .)
    METADATA        reduce using rule 65 (special_token -> any_timestamp .)
    STARS           reduce using rule 65 (special_token -> any_timestamp .)
    $end            reduce using rule 65 (special_token -> any_timestamp .)


state 29

    (66) special_token -> COMMENT .

    SEPARATOR       reduce using rule 66 (special_token -> COMMENT .)
    TEXT            reduce using rule 66 (special_token -> COMMENT .)
    SPACE           reduce using rule 66 (special_token -> COMMENT .)
    NEWLINE         reduce using rule 66 (special_token -> COMMENT .)
    SCHEDULING      reduce using rule 66 (special_token -> COMMENT .)
    COOKIE          reduce using rule 66 (special_token -> COMMENT .)
    PRIORITY        reduce using rule 66 (special_token -> COMMENT .)
    TODO            reduce using rule 66 (special_token -> COMMENT .)
    COMMENT         reduce using rule 66 (special_token -> COMMENT .)
    TAGS            reduce using rule 66 (special_token -> COMMENT .)
    ATIMESTAMP      reduce using rule 66 (special_token -> COMMENT .)
    ITIMESTAMP      reduce using rule 66 (special_token -> COMMENT .)
    METADATA        reduce using rule 66 (special_token -> COMMENT .)
    STARS           reduce using rule 66 (special_token -> COMMENT .)
    $end            reduce using rule 66 (special_token -> COMMENT .)


state 30

    (67) special_token -> TAGS .

    SEPARATOR       reduce using rule 67 (special_token -> TAGS .)
    TEXT            reduce using rule 67 (special_token -> TAGS .)
    SPACE           reduce using rule 67 (special_token -> TAGS .)
    NEWLINE         reduce using rule 67 (special_token -> TAGS .)
    SCHEDULING      reduce using rule 67 (special_token -> TAGS .)
    COOKIE          reduce using rule 67 (special_token -> TAGS .)
    PRIORITY        reduce using rule 67 (special_token -> TAGS .)
    TODO            reduce using rule 67 (special_token -> TAGS .)
    COMMENT         reduce using rule 67 (special_token -> TAGS .)
    TAGS            reduce using rule 67 (special_token -> TAGS .)
    ATIMESTAMP      reduce using rule 67 (special_token -> TAGS .)
    ITIMESTAMP      reduce using rule 67 (special_token -> TAGS .)
    METADATA        reduce using rule 67 (special_token -> TAGS .)
    STARS           reduce using rule 67 (special_token -> TAGS .)
    $end            reduce using rule 67 (special_token -> TAGS .)


state 31

    (9) metadata -> METADATA SEPARATOR .

    TEXT            reduce using rule 9 (metadata -> METADATA SEPARATOR .)
    SPACE           reduce using rule 9 (metadata -> METADATA SEPARATOR .)
    ATIMESTAMP      reduce using rule 9 (metadata -> METADATA SEPARATOR .)
    ITIMESTAMP      reduce using rule 9 (metadata -> METADATA SEPARATOR .)
    STARS           reduce using rule 9 (metadata -> METADATA SEPARATOR .)
    $end            reduce using rule 9 (metadata -> METADATA SEPARATOR .)


state 32

    (10) metadata -> METADATA NEWLINE .

    TEXT            reduce using rule 10 (metadata -> METADATA NEWLINE .)
    SPACE           reduce using rule 10 (metadata -> METADATA NEWLINE .)
    ATIMESTAMP      reduce using rule 10 (metadata -> METADATA NEWLINE .)
    ITIMESTAMP      reduce using rule 10 (metadata -> METADATA NEWLINE .)
    STARS           reduce using rule 10 (metadata -> METADATA NEWLINE .)
    $end            reduce using rule 10 (metadata -> METADATA NEWLINE .)


state 33

    (12) org_tree -> heading SEPARATOR .
